--- a/courses.html
+++ b/courses.html
@@ -316,9 +316,9 @@
                 class="latest-blog w-inline-block"
                 ><div class="blog-latest-image">
                   <img
-                    src="assets/img/pitch.gif"
+                    src="assets/img/pitch.webp"
                     loading="lazy"
-                    alt=""
+                    alt="Pitch"
                     sizes="(max-width: 767px) 90vw, (max-width: 1439px) 40vw, 545.1875px"
                     class="image hover-scale-animation"
                   />
@@ -365,9 +365,9 @@
                 ><div class="blog-up">
                   <div class="blog-image">
                     <img
-                      src="assets/img/business_model.gif"
+                      src="assets/img/business.webp"
                       loading="lazy"
-                      alt=""
+                      alt="Business Strategy"
                       sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                       class="image hover-scale-animation"
                     />
@@ -405,9 +405,9 @@
                 ><div class="blog-up">
                   <div class="blog-image">
                     <img
-                      src="assets/img/different-strategy.gif"
+                      src="assets/img/strategy & innovation.webp"
                       loading="lazy"
-                      alt=""
+                      alt="Strategy & Innovation"
                       sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                       class="image hover-scale-animation"
                     />
@@ -445,9 +445,9 @@
                 ><div class="blog-up">
                   <div class="blog-image">
                     <img
-                      src="assets/img/create.gif"
+                      src="assets/img/vadidation.webp"
                       loading="lazy"
-                      alt=""
+                      alt="Validation"
                       class="image hover-scale-animation"
                     />
                   </div>
@@ -486,9 +486,9 @@
                 ><div class="blog-up">
                   <div class="blog-image">
                     <img
-                      src="assets/img/start-business.gif"
+                      src="assets/img/startup-con.webp"
                       loading="lazy"
-                      alt=""
+                      alt="Startup Launch"
                       class="image hover-scale-animation"
                     />
                   </div>
@@ -527,7 +527,7 @@
                 ><div class="blog-up">
                   <div class="blog-image">
                     <img
-                      src="assets/img/founder.gif"
+                      src="assets/img/business-tycoons.webp"
                       loading="lazy"
                       alt=""
                       class="image hover-scale-animation"
@@ -566,7 +566,7 @@
                 ><div class="blog-up">
                   <div class="blog-image">
                     <img
-                      src="assets/img/90-days.gif"
+                      src="assets/img/90days.webp"
                       loading="lazy"
                       alt=""
                       class="image hover-scale-animation"
@@ -644,8 +644,8 @@
                       <div class="footer-column-heading-wrapper">
                           <h5>Other Pages</h5>
                       </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                          class="footer-link">Contact</a><a href="password-reset.html" class="footer-link">Password
-                          Reset</a>
+                          class="footer-link">Contact</a><a href="mentorship.html" class="footer-link">Mentorship
+                          </a>
                   </div>
                   <div class="footer-column">
                       <div class="footer-column-heading-wrapper">
