--- a/page2.html
+++ b/page2.html
@@ -193,12 +193,12 @@
                 </nav>
               </div>
               <a href="about.html" class="nav-link w-nav-link">About</a>
-              <a href="contact.html" class="nav-link w-nav-link">Contact</a>
+              <!--<a href="contact.html" class="nav-link w-nav-link">Contact</a>-->
             </nav>
           </div>
           <div class="navigation-right">
-            <a href="login.html" class="nav-link w-nav-link">Log In</a>
-            <a href="register.html" class="button _12-px-padding nav-button w-button">Register</a>
+            <!--<a href="login.html" class="nav-link w-nav-link">Log In</a>-->
+            <a href="Contact.html" class="button _12-px-padding nav-button w-button">Contact</a>
           </div>
         </div>
       </div>
@@ -316,10 +316,10 @@
                   </a>
                 </nav>
               </div>
-              <a href="about.html" class="mobile-nav-link w-nav-link">About</a><a href="contact.html"
+              <a href="about.html" class="mobile-nav-link w-nav-link">About</a><!--<a href="contact.html"
                 class="mobile-nav-link w-nav-link">Contact</a><a href="login.html" target="_blank"
-                class="mobile-nav-link w-nav-link">Log In</a><a href="register.html" target="_blank"
-                class="button _12-px-padding nav-button w-button">Register</a>
+                class="mobile-nav-link w-nav-link">Log In</a>--><a href="contact.html" target="_blank"
+                class="button _12-px-padding nav-button w-button">Contact</a>
             </div>
           </nav>
           <div class="menu-button-mob w-nav-button">
@@ -336,7 +336,7 @@
           <div role="listitem" class="w-dyn-item">
             <a data-w-id="2f526e64-a575-5a15-a0bc-dbe4a19f7d3a" href="enroll.html" class="latest-blog w-inline-block">
               <div class="blog-latest-image">
-                <img src="assets/img/rocket.gif" loading="lazy" alt=""
+                <img src="assets/img/startup-con.webp" loading="lazy" alt="Masterclass at Speed"
                   sizes="(max-width: 767px) 90vw, (max-width: 1439px) 40vw, 545.1875px"
                   class="image hover-scale-animation" />
               </div>
@@ -375,7 +375,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/pitch-investors.gif" loading="lazy" alt=""
+                  <img src="assets/img/conference.webp" loading="lazy" alt="Investor Pitch"
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -407,7 +407,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/design-thinking.webp" loading="lazy" alt=""
+                  <img src="assets/img/d&i.webp" loading="lazy" alt="Design Thinking"
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -437,7 +437,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/conference.gif" loading="lazy" alt=""
+                  <img src="assets/img/nirvana-conference.jpeg" loading="lazy" alt="Nirvana Conference"
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -499,7 +499,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/mvp.gif" loading="lazy" alt="" class="image hover-scale-animation" />
+                  <img src="assets/img/mvp.webp" loading="lazy" alt="MVP" class="image hover-scale-animation" />
                 </div>
                 <div style="background-color: #713bdb" class="blog-tag">
                   <div class="text-block _16-px full-white">Foundation</div>
@@ -527,7 +527,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/economics.webp" loading="lazy" alt=""
+                  <img src="assets/img/managerial economics.webp" loading="lazy" alt="Economics"
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -599,8 +599,8 @@
                     <div class="footer-column-heading-wrapper">
                         <h5>Other Pages</h5>
                     </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                        class="footer-link">Contact</a><a href="password-reset.html" class="footer-link">Password
-                        Reset</a>
+                        class="footer-link">Contact</a><a href="mentorship.html" class="footer-link">Mentorship
+                        </a>
                 </div>
                 <div class="footer-column">
                     <div class="footer-column-heading-wrapper">
