--- a/page2.html
+++ b/page2.html
@@ -198,7 +198,7 @@
           </div>
           <div class="navigation-right">
             <!--<a href="login.html" class="nav-link w-nav-link">Log In</a>-->
-            <a href="Contact.html" class="button _12-px-padding nav-button w-button">Contact</a>
+            <a href="contact.html" class="button _12-px-padding nav-button w-button">Contact</a>
           </div>
         </div>
       </div>
