--- a/page3.html
+++ b/page3.html
@@ -193,12 +193,12 @@
                 </nav>
               </div>
               <a href="about.html" class="nav-link w-nav-link">About</a>
-              <a href="contact.html" class="nav-link w-nav-link">Contact</a>
+              <!--<a href="contact.html" class="nav-link w-nav-link">Contact</a>-->
             </nav>
           </div>
           <div class="navigation-right">
-            <a href="login.html" class="nav-link w-nav-link">Log In</a>
-            <a href="register.html" class="button _12-px-padding nav-button w-button">Register</a>
+            <!--<a href="login.html" class="nav-link w-nav-link">Log In</a>-->
+            <a href="contact.html" class="button _12-px-padding nav-button w-button">Contact</a>
           </div>
         </div>
       </div>
@@ -315,10 +315,10 @@
                   </a>
                 </nav>
               </div>
-              <a href="about.html" class="mobile-nav-link w-nav-link">About</a><a href="contact.html"
+              <a href="about.html" class="mobile-nav-link w-nav-link">About</a><!--<a href="contact.html"
                 class="mobile-nav-link w-nav-link">Contact</a><a href="login.html" target="_blank"
-                class="mobile-nav-link w-nav-link">Log In</a><a href="register.html" target="_blank"
-                class="button _12-px-padding nav-button w-button">Register</a>
+                class="mobile-nav-link w-nav-link">Log In</a>--><a href="contact.html" target="_blank"
+                class="button _12-px-padding nav-button w-button">Contact</a>
             </div>
           </nav>
           <div class="menu-button-mob w-nav-button">
@@ -337,7 +337,7 @@
               href="enroll.html"
               class="latest-blog w-inline-block" style="opacity: 1">
               <div class="blog-latest-image">
-                <img src="assets/img/one-day.gif" loading="lazy" alt=""
+                <img src="assets/img/thinking & action.webp" loading="lazy" alt="Think and Act"
                   sizes="(max-width: 767px) 90vw, (max-width: 1439px) 40vw, 545.1875px"
                   class="image hover-scale-animation" style="
                       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -381,7 +381,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/key-to-success.jpeg" loading="lazy" alt=""
+                  <img src="assets/img/key-to-success.jpeg" loading="lazy" alt="Key"
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -412,7 +412,7 @@
               style="opacity: 1">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/idea-to-ipo.jpeg" loading="lazy" alt="" class="image hover-scale-animation"
+                  <img src="assets/img/idea-to-ipo.jpeg" loading="lazy" alt="I - I" class="image hover-scale-animation"
                     style="
                         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
                           rotateX(0deg) rotateY(0deg) rotateZ(0deg)
@@ -448,7 +448,7 @@
             <a href="enroll.html" class="blog w-inline-block" style="opacity: 1">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/searching_idea.gif" loading="lazy" alt=""
+                  <img src="assets/img/searching_idea.gif" loading="lazy" alt="Ideation"
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" style="
                         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -483,7 +483,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/idea.webp" loading="lazy" alt="" class="image hover-scale-animation" />
+                  <img src="assets/img/idea.webp" loading="lazy" alt="Brew" class="image hover-scale-animation" />
                 </div>
                 <div style="background-color: #713bdb" class="blog-tag">
                   <div class="text-block _16-px full-white">Foundation</div>
@@ -514,7 +514,7 @@
               style="opacity: 1">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/strategy.webp" loading="lazy" alt="" class="image hover-scale-animation" style="
+                  <img src="assets/img/strategy.webp" loading="lazy" alt="Stat" class="image hover-scale-animation" style="
                         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
                           rotateX(0deg) rotateY(0deg) rotateZ(0deg)
                           skew(0deg, 0deg);
@@ -550,7 +550,7 @@
               style="opacity: 1">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/funding.webp" loading="lazy" alt=""
+                  <img src="assets/img/funding.webp" loading="lazy" alt="Invest"
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" style="
                         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
