--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
                                     </div>
                                 </nav>
                             </div><a href="about.html" class="nav-link w-nav-link">About</a>
-                            <a href="contact.html" class="nav-link w-nav-link">Contact</a>
+                            <!--<a href="contact.html" class="nav-link w-nav-link">Contact</a>-->
                         </nav>
                     </div>
-                    <div class="navigation-right"><a href="login.html" class="nav-link w-nav-link">Log In</a>
-                        <a href="register.html" class="button _12-px-padding nav-button w-button">Register</a>
+                    <div class="navigation-right"><!--<a href="login.html" class="nav-link w-nav-link">Log In</a>-->
+                        <a href="contact.html" class="button _12-px-padding nav-button w-button">Contact</a>
                     </div>
                 </div>
             </div>
@@ -275,10 +275,10 @@
                                         </div>
                                     </a>
                                 </nav>
-                            </div><a href="about.html" class="mobile-nav-link w-nav-link">About</a><a
+                            </div><a href="about.html" class="mobile-nav-link w-nav-link">About</a><!--<a
                                 href="contact.html" class="mobile-nav-link w-nav-link">Contact</a><a href="login.html"
-                                target="_blank" class="mobile-nav-link w-nav-link">Log In</a><a href="register.html"
-                                target="_blank" class="button _12-px-padding nav-button w-button">Register</a>
+                                target="_blank" class="mobile-nav-link w-nav-link">Log In</a>--><a href="contact.html"
+                                target="_blank" class="button _12-px-padding nav-button w-button">Contact</a>
                         </div>
                     </nav>
                     <div class="menu-button-mob w-nav-button">
@@ -956,8 +956,8 @@
                         <div class="footer-column-heading-wrapper">
                             <h5>Other Pages</h5>
                         </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                            class="footer-link">Contact</a><a href="password-reset.html" class="footer-link">Password
-                            Reset</a>
+                            class="footer-link">Contact</a><a href="mentorship.html" class="footer-link">Mentorship
+                            </a>
                     </div>
                     <div class="footer-column">
                         <div class="footer-column-heading-wrapper">
