--- a/workshop.html
+++ b/workshop.html
@@ -178,12 +178,12 @@
                   </div>
                 </nav>
               </div><a href="about.html" class="nav-link w-nav-link">About</a>
-              <a href="contact.html" class="nav-link w-nav-link">Contact</a>
+              <!--<a href="contact.html" class="nav-link w-nav-link">Contact</a>-->
             </nav>
           </div>
           <div class="navigation-right">
-            <a href="login.html" class="nav-link w-nav-link">Log In</a>
-            <a href="register.html" class="button _12-px-padding nav-button w-button">Register</a>
+            <!--<a href="login.html" class="nav-link w-nav-link">Log In</a>-->
+            <a href="contact.html" class="button _12-px-padding nav-button w-button">Contact</a>
           </div>
         </div>
       </div>
@@ -281,10 +281,10 @@
                     </div>
                   </a>
                 </nav>
-              </div><a href="about.html" class="mobile-nav-link w-nav-link">About</a><a href="contact.html"
+              </div><a href="about.html" class="mobile-nav-link w-nav-link">About</a><!--<a href="contact.html"
                 class="mobile-nav-link w-nav-link">Contact</a><a href="login.html" target="_blank"
-                class="mobile-nav-link w-nav-link">Log In</a><a href="register.html" target="_blank"
-                class="button _12-px-padding nav-button w-button">Register</a>
+                class="mobile-nav-link w-nav-link">Log In</a>--><a href="contact.html" target="_blank"
+                class="button _12-px-padding nav-button w-button">Contact</a>
             </div>
           </nav>
           <div class="menu-button-mob w-nav-button">
@@ -301,7 +301,7 @@
           <div role="listitem" class="w-dyn-item">
             <a data-w-id="2f526e64-a575-5a15-a0bc-dbe4a19f7d3a" href="enroll.html" class="latest-blog w-inline-block">
               <div class="blog-latest-image">
-                <img src="assets/img/workshop-1.webp" loading="lazy" alt=""
+                <img src="assets/img/startup-pitch-workshop.webp" loading="lazy" alt=""
                   sizes="(max-width: 767px) 90vw, (max-width: 1439px) 40vw, 545.1875px"
                   class="image hover-scale-animation" />
               </div>
@@ -340,7 +340,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/pitch-investors.gif" loading="lazy" alt=""
+                  <img src="assets/img/behaviour.webp" loading="lazy" alt=""
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -372,7 +372,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/design-thinking.webp" loading="lazy" alt=""
+                  <img src="assets/img/attitude.webp" loading="lazy" alt=""
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -402,7 +402,7 @@
             <a href="enroll.html" class="blog w-inline-block">
               <div class="blog-up">
                 <div class="blog-image">
-                  <img src="assets/img/conference.gif" loading="lazy" alt=""
+                  <img src="assets/img/market-fit.webp" loading="lazy" alt=""
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, (max-width: 1439px) 26vw, 360px"
                     class="image hover-scale-animation" />
                 </div>
@@ -604,8 +604,8 @@
               <div class="footer-column-heading-wrapper">
                 <h5>Other Pages</h5>
               </div><a href="workshop.html" class="footer-link">Workshop</a><a href="contact.html"
-                class="footer-link">Contact</a><a href="password-reset.html" class="footer-link">Password
-                Reset</a>
+                class="footer-link">Contact</a><a href="mentorship.html" class="footer-link">Mentorship
+                </a>
             </div>
             <div class="footer-column">
               <div class="footer-column-heading-wrapper">
