--- a/courses.html
+++ b/courses.html
@@ -316,7 +316,7 @@
                 class="latest-blog w-inline-block"
                 ><div class="blog-latest-image">
                   <img
-                    src="assets/img/pitch.webp"
+                    src="https://startups.courses/assets/img/pitch.webp"
                     loading="lazy"
                     alt="Pitch"
                     sizes="(max-width: 767px) 90vw, (max-width: 1439px) 40vw, 545.1875px"
